# freewheeling

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  EVOLUTION  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  TUNING  configure  configure.ac
MacOSX/: FweelinMac.h  FweelinMac.mm  Info.plist  README-MAC  SDLMain.h  SDLMain.mm  freewheeling.icns  fweelin_Prefix.pch  main.c
MacOSX/English.lproj/: InfoPlist.strings
MacOSX/SDLMain.nib/: classes.nib  info.nib  objects.nib
MacOSX/fweelin.xcodeproj/: mercury.mode1  mercury.pbxuser  project.pbxproj
data/: .fweelin.rc  Makefile  Makefile.am  Makefile.in  basic_footswitch.xml  basics.xml  bcf2000-help.txt  bcf2000-preset.mid  bcf2000-synthedit.xml  bcf2000.xml  bindings.xml  browsers.xml  config-help.txt  coreinterface.xml  dancemat.xml  freewheeling.desktop  fweelin.xml  gdb-stackdump-cmds  graphics.xml  interfaces.xml  mercury.xml  midifootswitch.xml  midikeyboard.xml  patches-b3.xml  patches-channels.xml  patches-strings.xml  patches1.xml  patches2.xml  patches3.xml  pckeyboard.xml  pcr-m1.xml  rme-hdsp.xml  synthedit.xml
data/azerty/: Readme  coreinterface.xml  pckeyboard.xml
examples/: Makefile.am  README  combipatchdemo.xml  patches1.xml
packaging/: PKGBUILD  PKGBUILD.sig  README.md
scripts/: README  fweelin_scene_manager.sh  go-import-markers  goarchive-date  goarchive-scene  godelete-date  godx7  gofweel  gofweel-dx7  gomv-date  killfweel  patch-ghostess-xml-patchlist  patch-jack-rack-loadfile  phat1-basic.rack  phat1-echo.rack  vocalverb.rack  waitalsaports  waitjackports
src/: Makefile.am  Makefile.in  fweelin.cc  fweelin_amixer.cc  fweelin_amixer.h  fweelin_audioio.cc  fweelin_audioio.h  fweelin_block.cc  fweelin_block.h  fweelin_browser.cc  fweelin_browser.h  fweelin_config.cc  fweelin_config.h  fweelin_core.cc  fweelin_core.h  fweelin_core_dsp.cc  fweelin_core_dsp.h  fweelin_datatypes.cc  fweelin_datatypes.h  fweelin_event.cc  fweelin_event.h  fweelin_fluidsynth.cc  fweelin_fluidsynth.h  fweelin_logo.h  fweelin_looplibrary.h  fweelin_mem.cc  fweelin_mem.h  fweelin_midiio.cc  fweelin_midiio.h  fweelin_osc.cc  fweelin_osc.h  fweelin_paramset.cc  fweelin_paramset.h  fweelin_rcu.cc  fweelin_rcu.h  fweelin_sdlio.cc  fweelin_sdlio.h  fweelin_videoio.cc  fweelin_videoio.h  fweelin_videoio_displays.cc  (+2 more)
src/elastin/: elastin.cc  elastin.h
